--- a/src/AppBundle/Resources/views/Search/display-spoiler.html.twig
+++ b/src/AppBundle/Resources/views/Search/display-spoiler.html.twig
@@ -8,6 +8,7 @@
 {% if row*3+col < cards|length %}
 {% set card = cards[row*3+col] %}
 <div class="col-sm-4 display-spoiler-card">
+	<div class="faction-icon"><span class="icon-{{card.faction_code}} fg-{{card.faction_code}}"></span></div>
 	<h4>
 		{% include 'AppBundle:Search:card-name-with-link.html.twig' %}
 	</h4>
