"Target" - overruled by FAQ

--- a/src/AppBundle/Resources/views/Default/rulesreference.en.html.twig
+++ b/src/AppBundle/Resources/views/Default/rulesreference.en.html.twig
@@ -1,3 +1,9 @@
+<style>
+span.new	{ color:red }
+</style>
+
+<div style="text-align:justify">
+
 <h1 id="The_Only_Game_That_Matters">The Only Game That Matters</h1>
 
 <blockquote><em>Too many strange faces, Tyrion thought, too many new players. The game changed while I lay rotting in my bed, and no one will tell me the rules.</em><br>
@@ -109,6 +115,7 @@
 
 <p><strong>Related:</strong> <a href="#Printed">Printed</a>, <a href="#Modifiers">Modifiers</a></p>
 
+<span class="new">
 <h3 id="Bestow">Bestow</h3>
 
 <p>Bestow is a keyword ability. When a card with bestow (X) enters play, the card's controller may move up to X gold from his or her gold pool to that card. This decision is made immediately upon the card entering play, after resolving any interrupts to the card entering play but prior to triggering any reactions (forced or otherwise) to the card entering play.</p>
@@ -118,6 +125,7 @@
 <li>  Gold on a card is not in its controller's gold pool. Game steps and abilities that use or interact with gold in a player's gold pool do not interact with gold on cards.</li>
 <li>  When gold is discarded from a card with bestow, it is returned to the treasury.</li>
 </ul>
+</span>
 
 <h3 id="Blank">Blank</h3>
 
@@ -1258,7 +1266,9 @@
 <ul>
 <li>  The controller of a targeting ability chooses all targets for the effect unless otherwise specified by the card.</li>
 <li>  If an ability requires the choosing of a target (or targets), and there is no valid target (or not enough valid targets), then the ability cannot be initiated. This initiation check is made at the same time the ability's play restrictions are checked.</li>
-<li>  At the time targets are chosen, any currently valid targets are eligible to be chosen. (This choice is not restricted only to targets that were present during the initiation check.)</li>
+<span class="new">
+<li>  <s>At the time targets are chosen, any currently valid targets are eligible to be chosen. (This choice is not restricted only to targets that were present during the initiation check.)</s> Overruled by <a href="http://thronesdb.com/faq#Player_Choices_While_Initiating_Abilities" target="_blank">FAQ (3.2)</a>.</li>
+</span>
 <li>  If multiple targets are required to be chosen by the same player, these are chosen simultaneously.</li>
 <li>  An effect that can choose "any number" of targets does not successfully resolve (and cannot change the game state) if zero of those targets are chosen.</li>
 <li>  The resolution of some effects (such as post-then effects, or delayed effects) requires that targets are chosen after the initiation of the effect. Such targets need not be verified when checking play restrictions and determining whether or not the entire ability may initiate. If there are no valid targets at the time such targets would be chosen, that aspect of the effect fails to resolve.</li>
