--- a/src/AppBundle/Resources/views/Default/rulesreference.en.html.twig
+++ b/src/AppBundle/Resources/views/Default/rulesreference.en.html.twig
@@ -1737,3 +1737,5 @@ span.new	{ color:red }
 <p>As the taxation phase is the final phase in the round, this step also formalizes the end of the round. Any active "until the end of the round" lasting effects expire at this time.</p>
 
 <p>After this step is complete, play proceeds to the beginning of the plot phase of the next game round.</p>
+
+</div>
