--- a/src/AppBundle/Resources/views/Default/rulesreference.en.html.twig
+++ b/src/AppBundle/Resources/views/Default/rulesreference.en.html.twig
@@ -491,7 +491,7 @@ span.new	{ color:red }
 <p>While most triggered abilities are optional, some interrupt and reaction abilities are preceded by the word "Forced." Such abilities must be resolved immediately whenever the triggering condition specified in the ability text occurs.</p>
 
 <ul>
-<li>  For any given triggering condition, forced interrupts take priority and initiate before nonforced interrupts, and forced reactions take priority and initiate before non-forced reactions.</li>
+<li>  For any given triggering condition, forced interrupts take priority and initiate before non-forced interrupts, and forced reactions take priority and initiate before non-forced reactions.</li>
 <li>  If two or more forced abilities would initiate at the same moment, the first player determines the order in which the abilities initiate, regardless of who controls the cards bearing those abilities.</li>
 <li>  Each forced ability must resolve completely before the next forced ability to the same triggering condition may initiate.</li>
 </ul>
