--- a/src/AppBundle/Resources/views/Default/tournamentregulations.en.html.twig
+++ b/src/AppBundle/Resources/views/Default/tournamentregulations.en.html.twig
@@ -92,7 +92,7 @@ td		{ text-align:center; border: 1px solid black; border-collapse:collapse }
 
 <p><b>Unique identification example:</b> <em>Veronica includes Jon Snow in her draw deck, using the version from the Core Set. However, there are other cards with the name Jon Snow but different attributes and abilities in the game, so Veronica writes "Jon Snow (Core Set)" on her deck list.</em></p>
 
-<p>If a leader discovers a player's deck list missing appropriate information, he or she should find that player immediately and update the deck list based on the cards the player is using. If this would result in a significant and potentially advantageous change, the leader should consider investigating for possible cheating.</p>
+<p>If a leader discovers a player's deck list is missing appropriate information, he or she should find that player immediately and update the deck list based on the cards the player is using. If this would result in a significant and potentially advantageous change, the leader should consider investigating for possible cheating.</p>
 
 <h3 id="Card_Sleeves">Card Sleeves</h3>
 
@@ -420,11 +420,11 @@ td		{ text-align:center; border: 1px solid black; border-collapse:collapse }
 
 <h2 id="Relaxed">Relaxed</h2>
 
-<p>Tournaments at this level are welcoming to all players, regardless of experience level. Players are encouraged to help each other improve and learn, so long as it does not significantly disrupt the game. The focus is on creating a fun and friendly environment.</p>
+<p>Tournaments at this level are welcoming to all players, regardless of experience level. Players are encouraged to help each other improve and learn, so long as it does not significantly disrupt the game. The focus is on creating a fun and friendly environment. The Relaxed Tier is used for Store Championship events.</p>
 
 <h2 id="Formal">Formal</h2>
 
-<p>This tournament level expects players to posses at least a minimal amount of experience. Players should be familiar with the game rules, and be prepared to exercise that knowledge to play at a reasonable pace. Players are expected to avoid confusion about their actions and refrain from other sloppy play mistakes. The focus is a friendly competitive environment.</p>
+<p>This tournament level expects players to possess at least a minimal amount of experience. Players should be familiar with the game rules, and be prepared to exercise that knowledge to play at a reasonable pace. Players are expected to avoid confusion about their actions and refrain from other sloppy play mistakes. The focus is a friendly competitive environment. The Formal Tier is used for Regional Championship events.</p>
 
 <h2 id="Premier">Premier</h2>
 
