RRG links fixed

--- a/src/AppBundle/Resources/views/Default/faq.en.html.twig
+++ b/src/AppBundle/Resources/views/Default/faq.en.html.twig
@@ -9,7 +9,7 @@ i		{ font-weight:bold }
 <h1 id="FAQ">Notes, Errata, and Frequently Asked Questions</h1>
 <h3>Version 1.1, effective 10/10/2016</h3>
 
-<p>This document contains card clarification, errata, rule clarifications, frequently asked questions, and quick reference material for <em>A Game of Thrones: The Card Game</em>. The most recent version of this document is considered a supplement to the <em>A Game of Thrones: The Card Game</em> Tournament Regulations and the <em>A Game of Thrones: The Card Game</em> <a href="http://thronesdb.com/rules" target="_blank">Rules Reference</a>. All changes and additions to this document since the previous version are marked in <span class="new">red</span>.</p>
+<p>This document contains card clarification, errata, rule clarifications, frequently asked questions, and quick reference material for <em>A Game of Thrones: The Card Game</em>. The most recent version of this document is considered a supplement to the <em>A Game of Thrones: The Card Game</em> Tournament Regulations and the <em>A Game of Thrones: The Card Game</em> <a href="http://thronesdb.com/rulesreference" target="_blank">Rules Reference</a>. All changes and additions to this document since the previous version are marked in <span class="new">red</span>.</p>
 
 <p><b>New Content (v1.1):</b> <a href="#Notes_and_Errata">Notes and Errata</a>, <a href="#Player_Choices_While_Initiating_Abilities">Rulings and Clarifications</a>, <a href="#FAQ_13">Frequently Asked Questions</a>, <a href="#Card_Legality">Card Legality</a>, <a href="#Derived_Information">Definitions and Terms</a>.</p>
 
@@ -191,7 +191,7 @@ Should read: "<em>...choose and stand a <i>Lady</i> chara<u>c</u>ter.</em>"</p>
 <span class="new">
 <h3 id="Player_Choices_While_Initiating_Abilities">(3.2) Player Choices While Initiating Abilities</h3>
 
-<p>Player choices made as part of the initiating an ability/marshaling a card process (<a href="http://thronesdb.com/rules#Initiating_Abilities_Marshaling_Cards" target="_blank">Rules Reference</a>, page 10), including the choosing of targets, are constrained to those that were established as legal options in Step 1 of that process, where the legality of initiating the ability was checked.</p>
+<p>Player choices made as part of the initiating an ability/marshaling a card process (<a href="http://thronesdb.com/rulesreference#Initiating_Abilities_Marshaling_Cards" target="_blank">Rules Reference</a>, page 10), including the choosing of targets, are constrained to those that were established as legal options in Step 1 of that process, where the legality of initiating the ability was checked.</p>
 
 <p>If a change in the game state between Step 1 and Step 7 creates a situation in which there are no legal targets at the time targets are chosen, or a situation in which a choice must be made but there are no valid options for that choice, the ability is considered to resolve unsuccessfully. An event that resolves unsuccessfully is placed in its owner's discard pile.</p>
 
@@ -252,7 +252,7 @@ Should read: "<em>...choose and stand a <i>Lady</i> chara<u>c</u>ter.</em>"</p>
 
 <p><i>While I am in the process of playing a <a href="http://thronesdb.com/card/01045" target="_blank">Hand's Judgment</a> (Core, 45) from my hand, and my opponent uses another event card to attempt to cancel my Hand's Judgment, can I attempt to play that same copy of my Hand's Judgement a second time to cancel my opponent's event?</i></p>
 
-<p>The precursor to playing an event card involves declaring your intent to play the card, and showing the card to be used, if necessary (<a href="http://thronesdb.com/rules#Initiating_Abilities_Marshaling_Cards" target="_blank">RR, page 10</a>). If a card is revealed in this manner and is in the process of being played, the same card cannot be revealed from hand with an intent to play it an additional time. (You could, however, play another copy of the card.)</p>
+<p>The precursor to playing an event card involves declaring your intent to play the card, and showing the card to be used, if necessary (<a href="http://thronesdb.com/rulesreference#Initiating_Abilities_Marshaling_Cards" target="_blank">RR, page 10</a>). If a card is revealed in this manner and is in the process of being played, the same card cannot be revealed from hand with an intent to play it an additional time. (You could, however, play another copy of the card.)</p>
 
 <h3 id="FAQ_4">Nymeria Sand</h3>
 
@@ -287,7 +287,7 @@ Should read: "<em>...choose and stand a <i>Lady</i> chara<u>c</u>ter.</em>"</p>
 
 <p><i>If I play a limited card as a duplicate, does it count as my limited card for the round?</i></p>
 
-<p>Yes. The limited keyword is checked during step 1 of the timing sequence detailed on <a href="http://thronesdb.com/rules#Initiating_Abilities_Marshaling_Cards" target="_blank">page 10 of the RR</a>, which asks the question: "can the card be marshaled or played, or the ability initiated at this time?" In order to play a duplicate, a player must make several verifications during this step: that the card is unique, that he or she owns and controls a copy of that card in play, that there is no copy of that card in his or her dead pile. If the card to be played as a duplicate is limited, the player must also verify that he or she has not yet marshaled or played a limited card this round. If the player has not yet marshaled or played a limited card this round, and proceeds to marshal the card, the card does count count as the player's limited card for the round.</p>
+<p>Yes. The limited keyword is checked during step 1 of the timing sequence detailed on <a href="http://thronesdb.com/rulesreference#Initiating_Abilities_Marshaling_Cards" target="_blank">page 10 of the RR</a>, which asks the question: "can the card be marshaled or played, or the ability initiated at this time?" In order to play a duplicate, a player must make several verifications during this step: that the card is unique, that he or she owns and controls a copy of that card in play, that there is no copy of that card in his or her dead pile. If the card to be played as a duplicate is limited, the player must also verify that he or she has not yet marshaled or played a limited card this round. If the player has not yet marshaled or played a limited card this round, and proceeds to marshal the card, the card does count count as the player's limited card for the round.</p>
 
 <p class="mplain"><b>Related:</b> 	<a href="http://thronesdb.com/card/02064" target="_blank">The Arbor</a>, 
 					<a href="http://thronesdb.com/card/05017" target="_blank">Golden Tooth</a>.</p>
