Tokens - typo fixed

--- a/src/AppBundle/Resources/views/Default/tournamentregulations.en.html.twig
+++ b/src/AppBundle/Resources/views/Default/tournamentregulations.en.html.twig
@@ -117,7 +117,7 @@ td		{ text-align:center; border: 1px solid black; border-collapse:collapse }
 <p>Players may use only official <em>A Game of Thrones: The Card Game</em> components in tournament play, with the following exceptions for third-party replacements:</p>
 
 <ul>
-<li>Tokens that do not obscure card information></li>
+<li>Tokens that do not obscure card information</li>
 </ul>
 
 <p>Determining the legality of any questionable third-party tokens is the marshal's responsibility. Proxies of cards are not allowed unless used under the rules of "Lost and Damaged Cards" on page 6.</p>
