--- a/src/AppBundle/Resources/views/Default/faq.en.html.twig
+++ b/src/AppBundle/Resources/views/Default/faq.en.html.twig
@@ -11,7 +11,7 @@ i		{ font-weight:bold }
 
 <p>This document contains card clarification, errata, rule clarifications, frequently asked questions, and quick reference material for <em>A Game of Thrones: The Card Game</em>. The most recent version of this document is considered a supplement to the <em>A Game of Thrones: The Card Game</em> Tournament Regulations and the <em>A Game of Thrones: The Card Game</em> <a href="http://thronesdb.com/rulesreference" target="_blank">Rules Reference</a>. All changes and additions to this document since the previous version are marked in <span class="new">red</span>.</p>
 
-<p><b>New Content (v1.2):</b> <a href="#Open_Information">Definitions and Terms</a>, <a href="#Rulings_and_Clarifications">Rulings and Clarifications</a>, <a href="#Melee_Restricted_List">Melee Restricted List</a>, <a href="#FAQ_3">Frequently Asked Questions</a>.</p>
+<p><b>New Content (v1.2):</b> <a href="#Open_Information">Definitions and Terms</a>, <a href="#Playing_Events">Rulings and Clarifications</a>, <a href="#Melee_Restricted_List">Melee Restricted List</a>, <a href="#FAQ_3">Frequently Asked Questions</a>.</p>
 
 <p class="mplain"><b>Notes</b> and <b>Related</b> cards added by <b>mplain</b>.</p>
 
@@ -157,15 +157,15 @@ Should read: "<em>...choose and stand a <i>Lady</i> chara<u>c</u>ter.</em>"</p>
 <span class="new">
 <h3 id="Playing_Events">(1.5) Playing Events</h3>
 
-<p>Playing an event is defined as the process by which an event is revealed from its owner’s hand, its costs are paid and targets chosen (if applicable), its effects resolve (or are canceled), and it is placed in its owner’s discard pile.</p>
+<p>Playing an event is defined as the process by which an event is revealed from its owner's hand, its costs are paid and targets chosen (if applicable), its effects resolve (or are canceled), and it is placed in its owner's discard pile.</p>
 
-<p>After an event’s costs are paid and its targets chosen (if applicable), that event leaves its controller’s hand. During steps 6 and 7 of ability initiation (<a href="http://thronesdb.com/rulesreference#Initiating_Abilities_Marshaling_Cards" target="_blank">Rules Reference, page 10</a>), the event is in the process of being played, and is not considered to be in any specific out-of-play area. The event is placed in its owner’s discard pile after its effects are resolved in step 7.</p>
+<p>After an event's costs are paid and its targets chosen (if applicable), that event leaves its controller's hand. During steps 6 and 7 of ability initiation (<a href="http://thronesdb.com/rulesreference#Initiating_Abilities_Marshaling_Cards" target="_blank">Rules Reference, page 10</a>), the event is in the process of being played, and is not considered to be in any specific out-of-play area. The event is placed in its owner's discard pile after its effects are resolved in step 7.</p>
 
-<p>Some events have additional abilities that can only be triggered while the event is not in its owner’s hand. Triggering such an ability is not considered to be “playing an event,” and does not require paying the event’s normal cost, only the cost of that ability.</p>
+<p>Some events have additional abilities that can only be triggered while the event is not in its owner's hand. Triggering such an ability is not considered to be "playing an event," and does not require paying the event's normal cost, only the cost of that ability.</p>
 
-<p><em>For example: <a href="http://thronesdb.com/card/06016" target="_blank">The Prince’s Plan</a> (Blood and Gold, 16) has the ability “<b>Reaction:</b> After you lose a challenge, pay 1 gold to return The Prince’s Plan from your discard pile to your hand.” Triggering this ability is not considered playing the event, so you need only pay the 1 gold described in the ability’s text, and not the 2 gold cost of playing The Prince’s Plan.</em></p>
+<p><em>For example: <a href="http://thronesdb.com/card/06016" target="_blank">The Prince's Plan</a> (Blood and Gold, 16) has the ability "<b>Reaction:</b> After you lose a challenge, pay 1 gold to return The Prince's Plan from your discard pile to your hand." Triggering this ability is not considered playing the event, so you need only pay the 1 gold described in the ability's text, and not the 2 gold cost of playing The Prince's Plan.</em></p>
 
-<p>If an ability cancels the “effects of an event,” that ability can cancel the effects of any triggered ability on an event card.</p>
+<p>If an ability cancels the "effects of an event," that ability can cancel the effects of any triggered ability on an event card.</p>
 
 <h3 id="Priority_of_Simultaneous_Resolution">(1.6) Priority of Simultaneous Resolution</h3>
 
@@ -173,7 +173,7 @@ Should read: "<em>...choose and stand a <i>Lady</i> chara<u>c</u>ter.</em>"</p>
 
 <p>This determination is made only once, at the time the conflicting abilities would first affect the game state. This choice is then maintained as long as the conflicting abilities remain active. If at any point an additional conflicting ability becomes active, the first player may make a new determination.</p>
 
-<p><em>For example: The first player has <a href="http://thronesdb.com/card/04020" target="_blank">Varys’s Riddle</a> (War of Five Kings, 20) revealed, while that player’s opponent has <a href="http://thronesdb.com/card/04039" target="_blank">Summer Harvest</a> (War of Five Kings, 39) revealed, creating two conflicting values for the gold value on Summer Harvest. When the Summer Harvest player collects income, the first player will choose which value applies. If another effect later in the round references the gold value on Summer Harvest (for instance, <a href="http://thronesdb.com/card/06046" target="_blank">Underground Vault</a> (Blood and Gold, 46)), the same gold value will be used.</em></p>
+<p><em>For example: The first player has <a href="http://thronesdb.com/card/04020" target="_blank">Varys's Riddle</a> (War of Five Kings, 20) revealed, while that player's opponent has <a href="http://thronesdb.com/card/04039" target="_blank">Summer Harvest</a> (War of Five Kings, 39) revealed, creating two conflicting values for the gold value on Summer Harvest. When the Summer Harvest player collects income, the first player will choose which value applies. If another effect later in the round references the gold value on Summer Harvest (for instance, <a href="http://thronesdb.com/card/06046" target="_blank">Underground Vault</a> (Blood and Gold, 46)), the same gold value will be used.</em></p>
 </span>
 
 <h2 id="Card_Ability_Interpretation">2. Card Ability Interpretation</h2>
@@ -202,37 +202,37 @@ Should read: "<em>...choose and stand a <i>Lady</i> chara<u>c</u>ter.</em>"</p>
 <span class="new">
 <h3 id="#Card_Abilities_and_Out_of_Play_Areas">(2.4) Card Abilities & Out-of-Play Areas</h3>
 
-<p>Some card abilities attempt to interact with a card while it is in a specific out-of-play area. Such an aspect of a card ability cannot interact with a card that is not in that specific out-of-play area. Note that some abilities implicitly refer to the out-of-play area with which they can interact. For instance, a reaction that interacts with a character after it’s killed implicitly interacts with that character while it is in the dead pile, and a reaction that interacts with a card after it’s discarded implicitly interacts with that card while it is in the discard pile.</p>
+<p>Some card abilities attempt to interact with a card while it is in a specific out-of-play area. Such an aspect of a card ability cannot interact with a card that is not in that specific out-of-play area. Note that some abilities implicitly refer to the out-of-play area with which they can interact. For instance, a reaction that interacts with a character after it's killed implicitly interacts with that character while it is in the dead pile, and a reaction that interacts with a card after it's discarded implicitly interacts with that card while it is in the discard pile.</p>
 
-<p><em>For example: <a href="http://thronesdb.com/card/04057" target="_blank">Hot Pie</a> (Westeros, 57) is discarded from a player’s deck. An opponent plays <a href="http://thronesdb.com/card/07023" target="_blank">Now My Watch Begins</a> (Watchers on the Wall, 23) to put Hot Pie into play. Although the reaction window to Hot Pie being discarded is still open, <a href="http://thronesdb.com/card/02053" target="_blank">Crone of Vaes Dothrak</a>’s (Westeros, 53) reaction can no longer be used on Hot Pie, as he is no longer in the discard pile.</em></p>
+<p><em>For example: <a href="http://thronesdb.com/card/04057" target="_blank">Hot Pie</a> (Westeros, 57) is discarded from a player's deck. An opponent plays <a href="http://thronesdb.com/card/07023" target="_blank">Now My Watch Begins</a> (Watchers on the Wall, 23) to put Hot Pie into play. Although the reaction window to Hot Pie being discarded is still open, <a href="http://thronesdb.com/card/02053" target="_blank">Crone of Vaes Dothrak</a>'s (Westeros, 53) reaction can no longer be used on Hot Pie, as he is no longer in the discard pile.</em></p>
 
 <h3 id="#References_to_Specific_Positions_in_Game_Areas">(2.5) References to Specific Positions in Game Areas</h3>
 
-<p>An ability that refers to a card in a specific position within a game area (such as a player’s “revealed plot card” or the “top card of a player’s deck”) refers to any card that occupies that position while the ability is active, not just the card that occupies that position at the time the ability initiates. For instance, if a lasting effect raises the claim value on a player’s revealed plot card by 1 until the end of the phase, and that player subsequently reveals a new plot card during the phase, that lasting effect will remain active on the new plot card.</p>
+<p>An ability that refers to a card in a specific position within a game area (such as a player's "revealed plot card" or the "top card of a player's deck") refers to any card that occupies that position while the ability is active, not just the card that occupies that position at the time the ability initiates. For instance, if a lasting effect raises the claim value on a player's revealed plot card by 1 until the end of the phase, and that player subsequently reveals a new plot card during the phase, that lasting effect will remain active on the new plot card.</p>
 
 <h3 id="#Timing_of_Terminal_Condition_Effects">(2.6) Timing of Terminal Condition Effects</h3>
 
-<p>Some abilities create a delayed effect that will attempt to drive a character from play whenever a certain condition is met. The most common of these is the “terminal burn” effect, which kills a character if its STR is 0. Such an effect resolves automatically and immediately after the condition occurs, before any reactions to that moment may be used. If a character with a terminal burn effect applied has its STR reduced to 0, the following timing sequence is observed:</p>
+<p>Some abilities create a delayed effect that will attempt to drive a character from play whenever a certain condition is met. The most common of these is the "terminal burn" effect, which kills a character if its STR is 0. Such an effect resolves automatically and immediately after the condition occurs, before any reactions to that moment may be used. If a character with a terminal burn effect applied has its STR reduced to 0, the following timing sequence is observed:</p>
 
 <ol>
 
 <li>The STR-reduction effect becomes imminent.</li>
 <li>Interrupts to the STR-reduction effect may be used.</li>
-<li>The STR-reduction effect resolves, reducing the character’s STR to 0.</li>
-<li>The “terminal burn” kill effect becomes imminent.</li>
+<li>The STR-reduction effect resolves, reducing the character's STR to 0.</li>
+<li>The "terminal burn" kill effect becomes imminent.</li>
 <li>Interrupts to the kill effect may be used.</li>
 <li>The kill effect resolves.</li>
-<li>Reactions to the kill effect, or to the character’s STR being reduced, may be used.</li>
+<li>Reactions to the kill effect, or to the character's STR being reduced, may be used.</li>
 
 </ol>
 
-<p>Note that at any point after Step 3, the character’s STR is 0.</p>
+<p>Note that at any point after Step 3, the character's STR is 0.</p>
 
-<h3 id="#The_Word_You">(2.7) The Word “You”</h3>
+<h3 id="#The_Word_You">(2.7) The Word "You"</h3>
 
-<p>If a card ability uses the word “you” or “your,” that pronoun generally refers to the controller of the card.</p>
+<p>If a card ability uses the word "you" or "your," that pronoun generally refers to the controller of the card.</p>
 
-<p>Some cards have abilities that may be triggered by a player other than the card’s controller. In the text of such abilities, the word “you” or “your” refers to the player who is triggering the ability.</p>
+<p>Some cards have abilities that may be triggered by a player other than the card's controller. In the text of such abilities, the word "you" or "your" refers to the player who is triggering the ability.</p>
 </span>
 
 <h2 id="Dynamic_Situations">3. Dynamic Situations</h2>
@@ -244,7 +244,7 @@ Should read: "<em>...choose and stand a <i>Lady</i> chara<u>c</u>ter.</em>"</p>
 <span class="new">
 <p>If multiple effects would simultaneously attempt to drive a character out of play due to a terminal condition, the first player chooses the order in which those effects resolve. If a save used on the first removal effect also remedies the ongoing terminal condition, the subsequent removal effect(s) tied to that terminal condition will not resolve.</p>
 
-<p><em>For example: <a href="http://thronesdb.com/card/01176" target="_blank">Dracarys!</a> (Core, 176) is played on <a href="http://thronesdb.com/card/02111" target="_blank">Dagmer Cleftjaw</a> (Westeros, 111) while the plot <a href="http://thronesdb.com/card/02075" target="_blank">Blood of the Dragon</a> (Westeros, 75) is revealed. Dagmer’s STR is reduced to 0, and he is subject to the “killed if its STR is 0” effects of both cards. The first player decides to have Blood of the Dragon’s kill effect resolve first. Dagmer’s controller interrupts that effect with <a href="http://thronesdb.com/card/01081" target="_blank">Risen from the Sea</a> (Core, 81), saving Dagmer and giving him +1 STR. Because Dagmer’s STR is now 1, the kill effect from Dracarys! does not resolve, and Dagmer remains in play.</em></p>
+<p><em>For example: <a href="http://thronesdb.com/card/01176" target="_blank">Dracarys!</a> (Core, 176) is played on <a href="http://thronesdb.com/card/02111" target="_blank">Dagmer Cleftjaw</a> (Westeros, 111) while the plot <a href="http://thronesdb.com/card/02075" target="_blank">Blood of the Dragon</a> (Westeros, 75) is revealed. Dagmer's STR is reduced to 0, and he is subject to the "killed if its STR is 0" effects of both cards. The first player decides to have Blood of the Dragon's kill effect resolve first. Dagmer's controller interrupts that effect with <a href="http://thronesdb.com/card/01081" target="_blank">Risen from the Sea</a> (Core, 81), saving Dagmer and giving him +1 STR. Because Dagmer's STR is now 1, the kill effect from Dracarys! does not resolve, and Dagmer remains in play.</em></p>
 </span>
 
 <p class="mplain"><b>Related:</b> 	<a href="http://thronesdb.com/card/03002" target="_blank">Catelyn Stark</a> (WotN) + 
@@ -283,9 +283,9 @@ Should read: "<em>...choose and stand a <i>Lady</i> chara<u>c</u>ter.</em>"</p>
 <a href="http://thronesdb.com/card/01001" target="_blank">A Clash of Kings <em>(Core, 1)</em><br>
 <a href="http://thronesdb.com/card/01013" target="_blank">Heads on Spikes <em>(Core, 13)</em><br>
 <a href="http://thronesdb.com/card/01043" target="_blank">Superior Claim <em>(Core, 43)</em><br>
-<a href="http://thronesdb.com/card/02060" target="_blank">The Lord of the Crossing <em>(The King’s Peace, 60)</em><br>
-<a href="http://thronesdb.com/card/04118" target="_blank">Relentless Assault <em>(Tyrion’s Chain, 118)</em><br>
-<a href="http://thronesdb.com/card/06039" target="_blank">“The Dornishman’s Wife” <em>(Guarding the Realm, 39)</em></p>
+<a href="http://thronesdb.com/card/02060" target="_blank">The Lord of the Crossing <em>(The King's Peace, 60)</em><br>
+<a href="http://thronesdb.com/card/04118" target="_blank">Relentless Assault <em>(Tyrion's Chain, 118)</em><br>
+<a href="http://thronesdb.com/card/06039" target="_blank">"The Dornishman's Wife" <em>(Guarding the Realm, 39)</em></p>
 
 <p><b><u>Greyjoy</u>:</b><br>
 <a href="http://thronesdb.com/card/01078" target="_blank">Great Kraken <em>(Core, 78)</em><br>
@@ -302,7 +302,7 @@ Should read: "<em>...choose and stand a <i>Lady</i> chara<u>c</u>ter.</em>"</p>
 <a href="http://thronesdb.com/card/07036" target="_blank">Plaza of Pride <em>(Watchers on the Wall, 36)</em></p>
 
 <p><b><u>Tyrell</u>:</b><br>
-<a href="http://thronesdb.com/card/02024" target="_blank">Lady Sansa’s Rose <em>(The Road to Winterfell, 24)</em><br>
+<a href="http://thronesdb.com/card/02024" target="_blank">Lady Sansa's Rose <em>(The Road to Winterfell, 24)</em><br>
 <a href="http://thronesdb.com/card/06004" target="_blank">All Men Are Fools <em>(All Men Are Fools, 4)</em></p>
 </span>
 
@@ -327,7 +327,7 @@ Should read: "<em>...choose and stand a <i>Lady</i> chara<u>c</u>ter.</em>"</p>
 <p><i>While I am in the process of playing a <a href="http://thronesdb.com/card/01045" target="_blank">Hand's Judgment</a> (Core, 45) from my hand, and my opponent uses another event card to attempt to cancel my Hand's Judgment, can I attempt to play that same copy of my Hand's Judgement a second time to cancel my opponent's event?</i></p>
 
 <span class="new">
-<p>No. At the time the opponent’s cancel would initiate, Hand’s Judgment is in the process of being played and is no longer in your hand. Therefore, you are unable to play that copy of Hand’s Judgment. (You could, however, play another copy of the card.)</p>
+<p>No. At the time the opponent's cancel would initiate, Hand's Judgment is in the process of being played and is no longer in your hand. Therefore, you are unable to play that copy of Hand's Judgment. (You could, however, play another copy of the card.)</p>
 </span>
 
 <h3 id="FAQ_4">Nymeria Sand</h3>
