--- a/src/AppBundle/Resources/views/Default/tournamentregulations.en.html.twig
+++ b/src/AppBundle/Resources/views/Default/tournamentregulations.en.html.twig
@@ -228,7 +228,7 @@ td		{ text-align:center; border: 1px solid black; border-collapse:collapse }
 
 <p>Many <em>A Game of Thrones: The Card Game</em> tournaments use single elimination rounds, in which the winner of each pairing remains in the tournament and the losing player is eliminated and dropped from the tournament. Elimination rounds are usually used after a progression cut to the top 4, 8, 16, or 32 players and continue until only one player remains and is named the winner.</p>
 
-<p>For the first round of single elimination which follows a progression cut, pair the highest ranked player against the lowest ranked player who made the cut. This is Game #1. Pair the secondhighest player against the second-lowest player who made the cut. This is Game #2. Continue in this manner until all players are paired.</p>
+<p>For the first round of single elimination which follows a progression cut, pair the highest ranked player against the lowest ranked player who made the cut. This is Game #1. Pair the second-highest player against the second-lowest player who made the cut. This is Game #2. Continue in this manner until all players are paired.</p>
 
 <p>For tournaments which begin with single elimination rounds, byes will need to be utilized for the first round if there are a number of players not equal to an exponential power of 2 (4, 8, 16, 32, and so on). Randomly assign byes to a number of players equal to the difference between the actual player count and the next-highest exponential power of 2. Then pair all remaining players against each other at random. Assign each pairing and player with a bye a game number in a random order, starting with Game #1.</p>
 
