--- a/src/AppBundle/Resources/public/css/style.css
+++ b/src/AppBundle/Resources/public/css/style.css
@@ -18,7 +18,7 @@ body {
 .card-preview {
     color: red;
 }
-.card-type {
+.card-type, .card-designer {
     font-weight: 700;
 }
 .card-traits, .card-text i {
