--- a/src/AppBundle/Resources/views/Search/card-text.html.twig
+++ b/src/AppBundle/Resources/views/Search/card-text.html.twig
@@ -1,3 +1,6 @@
 <div class="card-text border-{{ card.faction_code }}">
 	{{ card.text|raw }}
+	{% if card.designer is not empty %}
+	<p class="card-designer">{{ card.designer }}</p>
+	{% endif %}
 </div>
