--- a/src/AppBundle/Resources/views/Default/faq.en.html.twig
+++ b/src/AppBundle/Resources/views/Default/faq.en.html.twig
@@ -274,36 +274,36 @@ Should read: "<em>...choose and stand a <i>Lady</i> chara<u>c</u>ter.</em>"</p>
 
 <p><b>No restricted cards at this time.</b></p>
 
+<span class="new">
 <h2 id="Melee_Restricted_List">Melee Restricted List</h2>
 
 <p>A player may select one card from the restricted list for any given deck, and cannot then include any other restricted cards in the same deck. A player may run as many copies of his or her chosen restricted card in a deck as the regular game rules (or card text) allow.</p>
 
-<span class="new">
 <p><b><u>Neutral</u>:</b><br>
-<a href="http://thronesdb.com/card/01001" target="_blank">A Clash of Kings <em>(Core, 1)</em><br>
-<a href="http://thronesdb.com/card/01013" target="_blank">Heads on Spikes <em>(Core, 13)</em><br>
-<a href="http://thronesdb.com/card/01043" target="_blank">Superior Claim <em>(Core, 43)</em><br>
-<a href="http://thronesdb.com/card/02060" target="_blank">The Lord of the Crossing <em>(The King's Peace, 60)</em><br>
-<a href="http://thronesdb.com/card/04118" target="_blank">Relentless Assault <em>(Tyrion's Chain, 118)</em><br>
-<a href="http://thronesdb.com/card/06039" target="_blank">"The Dornishman's Wife" <em>(Guarding the Realm, 39)</em></p>
+<a href="http://thronesdb.com/card/01001" target="_blank">A Clash of Kings</a> <em>(Core, 1)</em><br>
+<a href="http://thronesdb.com/card/01013" target="_blank">Heads on Spikes</a> <em>(Core, 13)</em><br>
+<a href="http://thronesdb.com/card/01043" target="_blank">Superior Claim</a> <em>(Core, 43)</em><br>
+<a href="http://thronesdb.com/card/02060" target="_blank">The Lord of the Crossing</a> <em>(The King's Peace, 60)</em><br>
+<a href="http://thronesdb.com/card/04118" target="_blank">Relentless Assault</a> <em>(Tyrion's Chain, 118)</em><br>
+<a href="http://thronesdb.com/card/06039" target="_blank">"The Dornishman's Wife"</a> <em>(Guarding the Realm, 39)</em></p>
 
 <p><b><u>Greyjoy</u>:</b><br>
-<a href="http://thronesdb.com/card/01078" target="_blank">Great Kraken <em>(Core, 78)</em><br>
-<a href="http://thronesdb.com/card/02012" target="_blank">Rise of the Kraken <em>(Taking the Black, 12)</em></p>
+<a href="http://thronesdb.com/card/01078" target="_blank">Great Kraken</a> <em>(Core, 78)</em><br>
+<a href="http://thronesdb.com/card/02012" target="_blank">Rise of the Kraken</a> <em>(Taking the Black, 12)</em></p>
 
 <p><b><u>Lannister</u>:</b><br>
-<a href="http://thronesdb.com/card/05001" target="_blank">Cersei Lannister <em>(Lions of Casterly Rock, 1)</em></p>
+<a href="http://thronesdb.com/card/05001" target="_blank">Cersei Lannister</a> <em>(Lions of Casterly Rock, 1)</em></p>
 
 <p><b><u>Stark</u>:</b><br>
-<a href="http://thronesdb.com/card/03003" target="_blank">Eddard Stark <em>(Wolves of the North, 3)</em><br>
-<a href="http://thronesdb.com/card/04003" target="_blank">Riverrun <em>(Across the Seven Kingdoms, 3)</em></p>
+<a href="http://thronesdb.com/card/03003" target="_blank">Eddard Stark</a> <em>(Wolves of the North, 3)</em><br>
+<a href="http://thronesdb.com/card/04003" target="_blank">Riverrun</a> <em>(Across the Seven Kingdoms, 3)</em></p>
 
 <p><b><u>Targaryen</u>:</b><br>
-<a href="http://thronesdb.com/card/07036" target="_blank">Plaza of Pride <em>(Watchers on the Wall, 36)</em></p>
+<a href="http://thronesdb.com/card/07036" target="_blank">Plaza of Pride</a> <em>(Watchers on the Wall, 36)</em></p>
 
 <p><b><u>Tyrell</u>:</b><br>
-<a href="http://thronesdb.com/card/02024" target="_blank">Lady Sansa's Rose <em>(The Road to Winterfell, 24)</em><br>
-<a href="http://thronesdb.com/card/06004" target="_blank">All Men Are Fools <em>(All Men Are Fools, 4)</em></p>
+<a href="http://thronesdb.com/card/02024" target="_blank">Lady Sansa's Rose</a> <em>(The Road to Winterfell, 24)</em><br>
+<a href="http://thronesdb.com/card/06004" target="_blank">All Men Are Fools</a> <em>(All Men Are Fools, 4)</em></p>
 </span>
 
 <h1 id="Frequently_Asked_Questions">Frequently Asked Questions</h1>
