--- a/src/AppBundle/Resources/views/Default/faq.en.html.twig
+++ b/src/AppBundle/Resources/views/Default/faq.en.html.twig
@@ -169,7 +169,7 @@ Should read: "<em>...choose and stand a <i>Lady</i> chara<u>c</u>ter.</em>"</p>
 
 <h3 id="Priority_of_Simultaneous_Resolution">(1.6) Priority of Simultaneous Resolution</h3>
 
-<p>If two more constant abilities and/or lasting effects cannot be applied simultaneously, the first player determines the order in which those constant abilities or lasting effects are applied. If the two ablities cannot coexist, the first player determines which one applies.</p>
+<p>If two or more constant abilities and/or lasting effects cannot be applied simultaneously, the first player determines the order in which those constant abilities or lasting effects are applied. If the two ablities cannot coexist, the first player determines which one applies.</p>
 
 <p>This determination is made only once, at the time the conflicting abilities would first affect the game state. This choice is then maintained as long as the conflicting abilities remain active. If at any point an additional conflicting ability becomes active, the first player may make a new determination.</p>
 
