--- a/app/Resources/FOSOAuthServerBundle/views/Authorize/authorize.html.twig
+++ b/app/Resources/FOSOAuthServerBundle/views/Authorize/authorize.html.twig
@@ -3,19 +3,36 @@
 {% block navbar %}{% endblock %}
 
 {% block body %}
-
-<div class="container">
-
-<div class="row">
-<div class="col-md-6 col-md-offset-3">
-
-{% block fos_oauth_server_content %}
-{% include "FOSOAuthServerBundle:Authorize:authorize_content.html.twig" %}
-{% endblock fos_oauth_server_content %}
-
-</div>  
-</div>  
-  
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title" style="line-height:2em">ThronesDB Authorization</h3>
+                    </div>
+                    <div class="panel-body">
+                        <p>
+                            The application <i>{{ client.name }}</i> would like to connect to your account.
+                        </p>
+                        <p>
+                            If you agree, <i>{{ client.name }}</i> will be able to perform the following operations on
+                            your behalf:
+                        </p>
+                        <ul>
+                            <li>Read your decks saved on ThronesDB</li>
+                            <li>Modify a deck or create a new one on ThronesDB</li>
+                        </ul>
+                        </p>
+                        <div class="form">
+                            {% block fos_oauth_server_content %}
+                                {% include "FOSOAuthServerBundle:Authorize:authorize_content.html.twig" %}
+                            {% endblock fos_oauth_server_content %}
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
 
 {% block footer %}{% endblock %}
