--- a/app/Resources/FOSUserBundle/views/Registration/register.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register.html.twig
@@ -1,18 +1,16 @@
-{% extends "FOSUserBundle::layout.html.twig" %}
+{% extends "@FOSUser/layout.html.twig" %}
 
 {% block fos_user_content %}
-<div class="row">
-<div class="col-md-6 col-md-push-3">
-<div class="panel panel-default">
-<div class="panel-heading">
-Registration
-</div>
-<div class="panel-body">
-
-{% include "FOSUserBundle:Registration:register_content.html.twig" %}
-
-</div>
-</div>
-</div>
-</div>
+    <div class="row">
+        <div class="col-md-6 col-md-push-3">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    Registration
+                </div>
+                <div class="panel-body">
+                    {% include "FOSUserBundle:Registration:register_content.html.twig" %}
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock fos_user_content %}
