--- a/src/AppBundle/Resources/views/Decklist/decklists.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/decklists.html.twig
@@ -69,7 +69,7 @@ $(function () {
 <td class="decklist-faction-image hidden-xs">
 	<img src="/bundles/app/images/factions/{{ decklist.faction.code }}.png">
         {% for agenda in decklist.slots.agendas %}
-            <img src="/bundles/cards/{{ agenda.card.code }}.png">
+            <img src="{{ agenda.card.image_url }}">
         {% endfor %}
 </td>
 <td>
