--- a/src/AppBundle/Resources/views/Search/display-card.html.twig
+++ b/src/AppBundle/Resources/views/Search/display-card.html.twig
@@ -39,8 +39,8 @@
         	</div>
         	<div class="col-sm-5" style="margin-bottom:2em">
         		<div>
-        			{% if card.imagesrc %}
-        			   <img src="{{ card.imagesrc }}" alt="{{ card.name }}" class="img-responsive" style="margin:auto">
+        			{% if card.image_url %}
+        			   <img src="{{ card.image_url }}" alt="{{ card.name }}" class="img-responsive" style="margin:auto">
         			{% else %}
         			   <div class="no-image" style="margin:auto"><div class="no-image-text">{{ 'noimage' | trans }}</div></div>
         			{% endif %}
