fix 500 when throwing 404

--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -7,10 +7,11 @@
     <meta name="mobile-web-app-capable" content="yes">
     <link rel="icon" sizes="192x192" href="/icon-192.png" />
     <link rel="apple-touch-icon" sizes="120x120" href="/icon-120.png" />
-    {% if app.request.locale != "en" and app.request.attributes.get('_route') != "" %}
-      {% set _route_params = app.request.attributes.get('_route_params')|default({}) %}
-      {% set _get_params = app.request.query.all()|default({}) %}
-      <link rel="canonical" href="{{ url(app.request.attributes.get('_route'), _route_params|merge(_get_params)|merge({'_locale': 'en'})) }}"/>
+    {% set _route = app.request.attributes.get('_route') %}
+    {% set _get_params = app.request.attributes.get('_get_params')|default({}) %}
+    {% set _route_params = app.request.attributes.get('_route_params')|default({})|merge(_get_params) %}
+    {% if app.request.locale != "en" and _route != "" %}
+      <link rel="canonical" href="{{ url(_route, _route_params|merge({'_locale': 'en'})) }}"/>
     {% endif %}
     {% if pagedescription is defined %}<meta name="description" content="{{ pagedescription }}">{% endif %}
 
@@ -102,7 +103,7 @@
                 <a href="#" class="disabled"><span class="fa fa-user"></span></a>
             </li>
             <!-- locale selection -->
-            {% if _route is not defined or _route is not empty %}
+            {% if _route is not empty %}
             <li class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown">
                 <span class="lang-sm" lang="{{ app.request.locale | default(default_locale) }}"></span>
@@ -110,9 +111,6 @@
               </a>
               <ul class="dropdown-menu">
                 {% for supported_locale in supported_locales %}
-                  {% set _route = app.request.attributes.get('_route') %}
-                  {% set _route_params = app.request.attributes.get('_route_params')|default({})|merge(app.request.query.all) %}
-                  {% set _get_params = app.request.attributes.get('_get_params')|default({}) %}
                   <li>
                     <a href="{{ path(_route, _route_params|merge(_get_params)|merge({'_locale': supported_locale})) }}">
                       <span lang="{{ supported_locale }}" class="lang-sm lang-lbl lang-lbl-full"></span>
