revert to NelmioApiDocBundle 2.x

--- a/src/AppBundle/Resources/views/Default/apiIntro.html.twig
+++ b/src/AppBundle/Resources/views/Default/apiIntro.html.twig
@@ -18,7 +18,7 @@ If you need such an access, please send me an email describing your project, inc
 
 <h3>Documentation</h3>
 
-The documentation can be found here: <a href="{{ absolute_url(path('nelmio_api_doc_index')) }}">{{ absolute_url(path('nelmio_api_doc_index')) }}</a>.
+The documentation can be found here: <a href="{{ absolute_url(path('app.swagger_ui')) }}">{{ absolute_url(path('app.swagger_ui')) }}</a>.
 
 <h3>Examples</h3>
 
