--- a/src/AppBundle/Resources/views/Default/faq.en.html.twig
+++ b/src/AppBundle/Resources/views/Default/faq.en.html.twig
@@ -7,11 +7,13 @@ i		{ font-weight:bold }
 <div style="text-align:justify">
 
 <h1 id="FAQ">Notes, Errata, and Frequently Asked Questions</h1>
-<h3>Version 1.2, effective 10/12/2017</h3>
+<h3>Version 1.3, effective 3/26/2018</h3>
 
 <p>This document contains card clarification, errata, rule clarifications, frequently asked questions, and quick reference material for <em>A Game of Thrones: The Card Game</em>. The most recent version of this document is considered a supplement to the <em>A Game of Thrones: The Card Game</em> Tournament Regulations and the <em>A Game of Thrones: The Card Game</em> <a href="http://thronesdb.com/rulesreference" target="_blank">Rules Reference</a>. All changes and additions to this document since the previous version are marked in <span class="new">red</span>.</p>
 
-<p><b>New Content (v1.2):</b> <a href="#Open_Information">Definitions and Terms</a>, <a href="#Playing_Events">Rulings and Clarifications</a>, <a href="#Melee_Restricted_List">Melee Restricted List</a>, <a href="#FAQ_3">Frequently Asked Questions</a>.</p>
+<span class="new">
+<p><b>New Content (v1.3):</b> <a href="#Spending_Gold">Spending Gold</a>, <a href="#Joust_Restricted_List">Joust Restricted List</a></p>
+</span>
 
 <p class="mplain"><b>Notes</b> and <b>Related</b> cards added by <b>mplain</b>.</p>
 
@@ -65,14 +67,14 @@ Should read: "<em>...choose and stand a <i>Lady</i> chara<u>c</u>ter.</em>"</p>
 
 <h3 id="Open_Information">Open Information</h3>
 
-<p>Open information is any information about the game, game state, or cards that is available to all players. This includes faceup cards in a player's discard, dead, and used piles, the number of cards in a player's deck or hand, <span class="new">any cards that have been removed from the game,</span> the amount of gold and power a player has, and any other information continuously available to all players.</p>
+<p>Open information is any information about the game, game state, or cards that is available to all players. This includes faceup cards in a player's discard, dead, and used piles, the number of cards in a player's deck or hand, any cards that have been removed from the game, the amount of gold and power a player has, and any other information continuously available to all players.</p>
 
 <p>All players are entitled access to open information and cannot hide open information from an opponent or omit specific details. A player must allow his or her opponent to discover the information themselves if they attempt to do so.</p>
 
 					
 <h3 id="Terminal_Condition">Terminal Condition</h3>
 
-<p><span class="new">This term describes a delayed effect, usually created by a constant ability or lasting effect, that will attempt to drive a card out of play whenever a certain condition is met. An example of a terminal condition is: <em>"Until the end of the phase, that character is killed if its STR is 0."</em></span></p>
+<p>This term describes a delayed effect, usually created by a constant ability or lasting effect, that will attempt to drive a card out of play whenever a certain condition is met. An example of a terminal condition is: <em>"Until the end of the phase, that character is killed if its STR is 0."</em></p>
 
 <p class="mplain"><b>Related:</b> 	<a href="http://thronesdb.com/card/01173" target="_blank">Plaza of Punishment</a>, 
 									<a href="http://thronesdb.com/card/01176" target="_blank">Dracarys!</a>, 
@@ -154,7 +156,6 @@ Should read: "<em>...choose and stand a <i>Lady</i> chara<u>c</u>ter.</em>"</p>
 
 </ul>
 
-<span class="new">
 <h3 id="Playing_Events">(1.5) Playing Events</h3>
 
 <p>Playing an event is defined as the process by which an event is revealed from its owner's hand, its costs are paid and targets chosen (if applicable), its effects resolve (or are canceled), and it is placed in its owner's discard pile.</p>
@@ -174,7 +175,6 @@ Should read: "<em>...choose and stand a <i>Lady</i> chara<u>c</u>ter.</em>"</p>
 <p>This determination is made only once, at the time the conflicting abilities would first affect the game state. This choice is then maintained as long as the conflicting abilities remain active. If at any point an additional conflicting ability becomes active, the first player may make a new determination.</p>
 
 <p><em>For example: The first player has <a href="http://thronesdb.com/card/04020" target="_blank">Varys's Riddle</a> (War of Five Kings, 20) revealed, while that player's opponent has <a href="http://thronesdb.com/card/04039" target="_blank">Summer Harvest</a> (War of Five Kings, 39) revealed, creating two conflicting values for the gold value on Summer Harvest. When the Summer Harvest player collects income, the first player will choose which value applies. If another effect later in the round references the gold value on Summer Harvest (for instance, <a href="http://thronesdb.com/card/06046" target="_blank">Underground Vault</a> (Blood and Gold, 46)), the same gold value will be used.</em></p>
-</span>
 
 <h2 id="Card_Ability_Interpretation">2. Card Ability Interpretation</h2>
 
@@ -199,7 +199,6 @@ Should read: "<em>...choose and stand a <i>Lady</i> chara<u>c</u>ter.</em>"</p>
 
 <p><em>For example: <a href="http://thronesdb.com/card/01026" target="_blank">Wildfire Assault</a> (Core, 26) allows each player to choose up to 3 characters he or she controls. The effect then resolves on the characters not chosen. The targets chosen by this ability are "referential targets," and a player is not bound by the rule that the chosen targets are affected by Wildfire Assault's effect, as this would be impossible: the chosen targets for this ability are never affected by its effect.</em></p>
 
-<span class="new">
 <h3 id="#Card_Abilities_and_Out_of_Play_Areas">(2.4) Card Abilities & Out-of-Play Areas</h3>
 
 <p>Some card abilities attempt to interact with a card while it is in a specific out-of-play area. Such an aspect of a card ability cannot interact with a card that is not in that specific out-of-play area. Note that some abilities implicitly refer to the out-of-play area with which they can interact. For instance, a reaction that interacts with a character after it's killed implicitly interacts with that character while it is in the dead pile, and a reaction that interacts with a card after it's discarded implicitly interacts with that card while it is in the discard pile.</p>
@@ -233,6 +232,16 @@ Should read: "<em>...choose and stand a <i>Lady</i> chara<u>c</u>ter.</em>"</p>
 <p>If a card ability uses the word "you" or "your," that pronoun generally refers to the controller of the card.</p>
 
 <p>Some cards have abilities that may be triggered by a player other than the card's controller. In the text of such abilities, the word "you" or "your" refers to the player who is triggering the ability.</p>
+
+<span class="new">
+
+<h3 id="#Spending_Gold">(2.8) Spending Gold</h3>
+
+<p>If a card ability allows a player to "spend" gold as if it were in his or her gold pool, that gold may be used any time that player could voluntarily pay or move gold from his or her gold pool. This includes paying costs of cards or abilities, giving gold to an opponent, and moving gold using the bestow keyword.</p>
+
+<p class="mplain"><b>Related:</b>
+					<a href="http://thronesdb.com/card/08019" target="_blank">The Iron Bank</a>,
+					<a href="http://thronesdb.com/card/08070" target="_blank">Sweet Cersei</a></p>
 </span>
 
 <h2 id="Dynamic_Situations">3. Dynamic Situations</h2>
@@ -241,11 +250,9 @@ Should read: "<em>...choose and stand a <i>Lady</i> chara<u>c</u>ter.</em>"</p>
 
 <p>When determining if a save effect has the potential to remedy an ongoing terminal condition, anticipate only the application of all aspects of the effect that is producing the save as well as all lasting effects and constant abilities that would be affecting the card upon application of the effect.</p>
 
-<span class="new">
 <p>If multiple effects would simultaneously attempt to drive a character out of play due to a terminal condition, the first player chooses the order in which those effects resolve. If a save used on the first removal effect also remedies the ongoing terminal condition, the subsequent removal effect(s) tied to that terminal condition will not resolve.</p>
 
 <p><em>For example: <a href="http://thronesdb.com/card/01176" target="_blank">Dracarys!</a> (Core, 176) is played on <a href="http://thronesdb.com/card/02111" target="_blank">Dagmer Cleftjaw</a> (Westeros, 111) while the plot <a href="http://thronesdb.com/card/02075" target="_blank">Blood of the Dragon</a> (Westeros, 75) is revealed. Dagmer's STR is reduced to 0, and he is subject to the "killed if its STR is 0" effects of both cards. The first player decides to have Blood of the Dragon's kill effect resolve first. Dagmer's controller interrupts that effect with <a href="http://thronesdb.com/card/01081" target="_blank">Risen from the Sea</a> (Core, 81), saving Dagmer and giving him +1 STR. Because Dagmer's STR is now 1, the kill effect from Dracarys! does not resolve, and Dagmer remains in play.</em></p>
-</span>
 
 <p class="mplain"><b>Related:</b> 	<a href="http://thronesdb.com/card/03002" target="_blank">Catelyn Stark</a> (WotN) + 
 									<a href="http://thronesdb.com/card/03008" target="_blank">Jory Cassel</a>, 
@@ -272,9 +279,19 @@ Should read: "<em>...choose and stand a <i>Lady</i> chara<u>c</u>ter.</em>"</p>
 
 <p>A player may select one card from the restricted list for any given deck, and cannot then include any other restricted cards in the same deck. A player may run as many copies of his or her chosen restricted card in a deck as the regular game rules (or card text) allow.</p>
 
-<p><b>No restricted cards at this time.</b></p>
-
 <span class="new">
+<p><b><u>Neutral</u>:</b><br>
+<a href="http://thronesdb.com/card/06040" target="_blank">The Annals of Castle Black</a> <em>(Guarding the Realm, 40)</em><br>
+<a href="http://thronesdb.com/card/06100" target="_blank">Wheels Within Wheels</a> <em>(Oberyn's Revenge, 100)</em><br>
+<a href="http://thronesdb.com/card/01045" target="_blank">The Hand's Judgment</a> <em>(Core, 45)</em><br>
+
+<p><b><u>Lannister</u>:</b><br>
+<a href="http://thronesdb.com/card/05010" target="_blank">Taena Merryweather</a> <em>(Lions of Casterly Rock, 10)</em></p>
+
+<p><b><u>Tyrell</u>:</b><br>
+<a href="http://thronesdb.com/card/06103" target="_blank">Highgarden Minstrel</a> <em>(The Brotherhood Without Banners, 103)</em><br>
+</span>
+
 <h2 id="Melee_Restricted_List">Melee Restricted List</h2>
 
 <p>A player may select one card from the restricted list for any given deck, and cannot then include any other restricted cards in the same deck. A player may run as many copies of his or her chosen restricted card in a deck as the regular game rules (or card text) allow.</p>
@@ -304,7 +321,6 @@ Should read: "<em>...choose and stand a <i>Lady</i> chara<u>c</u>ter.</em>"</p>
 <p><b><u>Tyrell</u>:</b><br>
 <a href="http://thronesdb.com/card/02024" target="_blank">Lady Sansa's Rose</a> <em>(The Road to Winterfell, 24)</em><br>
 <a href="http://thronesdb.com/card/06004" target="_blank">All Men Are Fools</a> <em>(All Men Are Fools, 4)</em></p>
-</span>
 
 <h1 id="Frequently_Asked_Questions">Frequently Asked Questions</h1>
 
@@ -326,9 +342,7 @@ Should read: "<em>...choose and stand a <i>Lady</i> chara<u>c</u>ter.</em>"</p>
 
 <p><i>While I am in the process of playing a <a href="http://thronesdb.com/card/01045" target="_blank">Hand's Judgment</a> (Core, 45) from my hand, and my opponent uses another event card to attempt to cancel my Hand's Judgment, can I attempt to play that same copy of my Hand's Judgement a second time to cancel my opponent's event?</i></p>
 
-<span class="new">
 <p>No. At the time the opponent's cancel would initiate, Hand's Judgment is in the process of being played and is no longer in your hand. Therefore, you are unable to play that copy of Hand's Judgment. (You could, however, play another copy of the card.)</p>
-</span>
 
 <h3 id="FAQ_4">Nymeria Sand</h3>
 
