--- a/src/AppBundle/Resources/views/Default/faq.en.html.twig
+++ b/src/AppBundle/Resources/views/Default/faq.en.html.twig
@@ -275,21 +275,21 @@ Should read: "<em>...choose and stand a <i>Lady</i> chara<u>c</u>ter.</em>"</p>
 
 <p>For most Relaxed and Formal tier events, a product is legal from the time of its release until the time of its rotation (if applicable). For Premier tier events (such as the North American and World Championships), product becomes legal 11 days after its official release to ensure that all competitors have sufficient opportunity to obtain and familiarize themselves with all products in the defined pool. For a current list of legal product, see the FFG website, here: <a href="https://www.fantasyflightgames.com/en/op/legality/" target="_blank">https://www.fantasyflightgames.com/en/op/legality/</a></p>
 
+<span class="new">
 <h2 id="Joust_Restricted_List">Joust Restricted List</h2>
 
 <p>A player may select one card from the restricted list for any given deck, and cannot then include any other restricted cards in the same deck. A player may run as many copies of his or her chosen restricted card in a deck as the regular game rules (or card text) allow.</p>
 
-<span class="new">
 <p><b><u>Neutral</u>:</b><br>
 <a href="http://thronesdb.com/card/06040" target="_blank">The Annals of Castle Black</a> <em>(Guarding the Realm, 40)</em><br>
 <a href="http://thronesdb.com/card/06100" target="_blank">Wheels Within Wheels</a> <em>(Oberyn's Revenge, 100)</em><br>
-<a href="http://thronesdb.com/card/01045" target="_blank">The Hand's Judgment</a> <em>(Core, 45)</em><br>
+<a href="http://thronesdb.com/card/01045" target="_blank">The Hand's Judgment</a> <em>(Core, 45)</em></p>
 
 <p><b><u>Lannister</u>:</b><br>
 <a href="http://thronesdb.com/card/05010" target="_blank">Taena Merryweather</a> <em>(Lions of Casterly Rock, 10)</em></p>
 
 <p><b><u>Tyrell</u>:</b><br>
-<a href="http://thronesdb.com/card/06103" target="_blank">Highgarden Minstrel</a> <em>(The Brotherhood Without Banners, 103)</em><br>
+<a href="http://thronesdb.com/card/06103" target="_blank">Highgarden Minstrel</a> <em>(The Brotherhood Without Banners, 103)</em></p>
 </span>
 
 <h2 id="Melee_Restricted_List">Melee Restricted List</h2>
