--- a/src/AppBundle/Resources/views/Default/faq.en.html.twig
+++ b/src/AppBundle/Resources/views/Default/faq.en.html.twig
@@ -199,17 +199,17 @@ Should read: "<em>...choose and stand a <i>Lady</i> chara<u>c</u>ter.</em>"</p>
 
 <p><em>For example: <a href="http://thronesdb.com/card/01026" target="_blank">Wildfire Assault</a> (Core, 26) allows each player to choose up to 3 characters he or she controls. The effect then resolves on the characters not chosen. The targets chosen by this ability are "referential targets," and a player is not bound by the rule that the chosen targets are affected by Wildfire Assault's effect, as this would be impossible: the chosen targets for this ability are never affected by its effect.</em></p>
 
-<h3 id="#Card_Abilities_and_Out_of_Play_Areas">(2.4) Card Abilities & Out-of-Play Areas</h3>
+<h3 id="Card_Abilities_and_Out_of_Play_Areas">(2.4) Card Abilities & Out-of-Play Areas</h3>
 
 <p>Some card abilities attempt to interact with a card while it is in a specific out-of-play area. Such an aspect of a card ability cannot interact with a card that is not in that specific out-of-play area. Note that some abilities implicitly refer to the out-of-play area with which they can interact. For instance, a reaction that interacts with a character after it's killed implicitly interacts with that character while it is in the dead pile, and a reaction that interacts with a card after it's discarded implicitly interacts with that card while it is in the discard pile.</p>
 
 <p><em>For example: <a href="http://thronesdb.com/card/04057" target="_blank">Hot Pie</a> (Westeros, 57) is discarded from a player's deck. An opponent plays <a href="http://thronesdb.com/card/07023" target="_blank">Now My Watch Begins</a> (Watchers on the Wall, 23) to put Hot Pie into play. Although the reaction window to Hot Pie being discarded is still open, <a href="http://thronesdb.com/card/02053" target="_blank">Crone of Vaes Dothrak</a>'s (Westeros, 53) reaction can no longer be used on Hot Pie, as he is no longer in the discard pile.</em></p>
 
-<h3 id="#References_to_Specific_Positions_in_Game_Areas">(2.5) References to Specific Positions in Game Areas</h3>
+<h3 id="References_to_Specific_Positions_in_Game_Areas">(2.5) References to Specific Positions in Game Areas</h3>
 
 <p>An ability that refers to a card in a specific position within a game area (such as a player's "revealed plot card" or the "top card of a player's deck") refers to any card that occupies that position while the ability is active, not just the card that occupies that position at the time the ability initiates. For instance, if a lasting effect raises the claim value on a player's revealed plot card by 1 until the end of the phase, and that player subsequently reveals a new plot card during the phase, that lasting effect will remain active on the new plot card.</p>
 
-<h3 id="#Timing_of_Terminal_Condition_Effects">(2.6) Timing of Terminal Condition Effects</h3>
+<h3 id="Timing_of_Terminal_Condition_Effects">(2.6) Timing of Terminal Condition Effects</h3>
 
 <p>Some abilities create a delayed effect that will attempt to drive a character from play whenever a certain condition is met. The most common of these is the "terminal burn" effect, which kills a character if its STR is 0. Such an effect resolves automatically and immediately after the condition occurs, before any reactions to that moment may be used. If a character with a terminal burn effect applied has its STR reduced to 0, the following timing sequence is observed:</p>
 
@@ -227,7 +227,7 @@ Should read: "<em>...choose and stand a <i>Lady</i> chara<u>c</u>ter.</em>"</p>
 
 <p>Note that at any point after Step 3, the character's STR is 0.</p>
 
-<h3 id="#The_Word_You">(2.7) The Word "You"</h3>
+<h3 id="The_Word_You">(2.7) The Word "You"</h3>
 
 <p>If a card ability uses the word "you" or "your," that pronoun generally refers to the controller of the card.</p>
 
@@ -235,7 +235,7 @@ Should read: "<em>...choose and stand a <i>Lady</i> chara<u>c</u>ter.</em>"</p>
 
 <span class="new">
 
-<h3 id="#Spending_Gold">(2.8) Spending Gold</h3>
+<h3 id="Spending_Gold">(2.8) Spending Gold</h3>
 
 <p>If a card ability allows a player to "spend" gold as if it were in his or her gold pool, that gold may be used any time that player could voluntarily pay or move gold from his or her gold pool. This includes paying costs of cards or abilities, giving gold to an opponent, and moving gold using the bestow keyword.</p>
 
