RRG updated with rules for Shadows

--- a/src/AppBundle/Resources/views/Default/rulesreference.en.html.twig
+++ b/src/AppBundle/Resources/views/Default/rulesreference.en.html.twig
@@ -1275,7 +1275,7 @@ span.new	{ color:red }
 
 <p>A player may bring a unique card out of shadows by paying its shadow cost even if he or she owns and controls another copy of that unique card in play. However, the card will enter play as a duplicate.</p>
 
-<p>Bringing a unique card out of shadows is subject to the same restrictions as any other attempt to put a unique card into play. If a unique card is unable to enter play legally, it may not be brought out of shadows.
+<p>Bringing a unique card out of shadows is subject to the same restrictions as any other attempt to put a unique card into play. If a unique card is unable to enter play legally, it may not be brought out of shadows.</p>
 </span>
 
 <h3 id="Stand">Stand, Standing</h3>
